Do simple fixes.

--- a/dbg/tcp/client/Dialog.ui
+++ b/dbg/tcp/client/Dialog.ui
@@ -49,6 +49,9 @@
          <property name="text">
           <string>Send</string>
          </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
       </layout>
