--- a/ndbg/udp/Dialog.ui
+++ b/ndbg/udp/Dialog.ui
@@ -85,12 +85,12 @@
       <number>65535</number>
      </property>
      <property name="value">
-      <number>80</number>
+      <number>49001</number>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QPushButton" name="pushButtonConnectDisconnect">
+    <widget class="QPushButton" name="pushButtonBind">
      <property name="minimumSize">
       <size>
        <width>160</width>
@@ -110,7 +110,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Connect</string>
+      <string>Bind</string>
      </property>
      <property name="autoDefault">
       <bool>false</bool>
@@ -213,7 +213,7 @@
  </widget>
  <tabstops>
   <tabstop>spinBoxPort</tabstop>
-  <tabstop>pushButtonConnectDisconnect</tabstop>
+  <tabstop>pushButtonBind</tabstop>
   <tabstop>lineEditData</tabstop>
   <tabstop>pushButtonSend</tabstop>
   <tabstop>comboBoxFormat</tabstop>
